# group_sensor_task

任务3.10/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  test2.pro  test2.pro.user.24c3dd8  videosurface.cpp  videosurface.h
任务3.11V1/: CMakeLists.txt  README.md  main.cpp
任务3.4.1/: CMakeLists.txt  README.md
任务3.4.1/common/kalman/: CMakeLists.txt
任务3.4.1/common/math/: CMakeLists.txt
任务3.4.1/modules/: CMakeLists.txt
任务3.4.1/modules/A1/: CMakeLists.txt
任务3.4.1/modules/A2/: CMakeLists.txt
任务3.4.1/modules/M1/: CMakeLists.txt
任务3.4.1/modules/M2/: CMakeLists.txt
任务3.5.2/: README.md
任务3.5.2V2/: README.md
任务3.5.2V2/src/camera/: CMakeLists.txt  camera.launch  package.xml
任务3.5.2V2/src/camera/src/: image_pub.cpp  image_sub.cpp
任务3.6/: README.md  dataset.py  getOnnx.py  model.py  onnx_test.py  predict.py  train.py
任务3.6/arrange/: CMakeLists.txt  main.cpp
任务3.6/arrange/cmake/: FindOrt.cmake
任务3.7/: readme.md
任务3.9/: 3.9.1.1.md  3.9.1.2.md  3.9.2.1.md
任务三/: main.py
任务二/devel/: .catkin  .rosinstall
任务二/devel/lib/pkgconfig/: usb_cam.pc
任务二/devel/lib/usb_cam/: usb_cam_node
任务二/devel/share/usb_cam/cmake/: usb_camConfig.cmake
